--- a/public/css/home.responsive.css
+++ b/public/css/home.responsive.css
@@ -53,6 +53,10 @@
     #popUpModal .modal-content .logo img {
         width: 90px;
     }
+    #popUpModal .modal-content .header {
+        font-size: 1rem;
+        width: 220px;
+    }
     .fixed-contact-header {
         font-size: 12px !important;
     }
@@ -87,7 +91,6 @@
 
 @media only screen and (min-width: 992px) {
     .contact-form {
-        top: 10%;
         left: 5%;
         width: 280px;
     }
@@ -95,7 +98,7 @@
 
 @media only screen and (min-width: 1200px) {
     .contact-form {
-        left: 8%;
+        left: 5%;
         width: 330px;
     }
 }
